--- a/BaseAndroid/src/main/res/values/styles.xml
+++ b/BaseAndroid/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <resources>
 
+
     <!--
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
@@ -15,6 +16,24 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    </style>
+
+    <style name="SplashTheme" parent="android:Theme.Holo.Light.NoActionBar.Fullscreen"/>
+
+    <style name="ActionBarTheme" parent="@style/Theme.AppCompat.Light">
+        <!-- Support library compatibility -->
+        <item name="actionBarSize">@dimen/margin40</item>
+        <item name="actionBarStyle">@style/solid_ActionBar</item>
+    </style>
+
+    <style name="solid_ActionBar" parent="@style/Widget.AppCompat.ActionBar">
+        <item name="background">@color/red</item>
+        <item name="titleTextStyle">@style/ActionBarTitleTheme</item>
+    </style>
+
+    <style name="ActionBarTitleTheme"
+        parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
