Update base activity classes in order to include navigation drawer and compatActionBar more naturally to extended classes.

--- a/BaseAndroid/src/main/res/layout/drawer_activity.xml
+++ b/BaseAndroid/src/main/res/layout/drawer_activity.xml
@@ -12,10 +12,11 @@
         android:layout_height="match_parent" />
 
     <!-- The navigation drawer -->
-    <FrameLayout
-        android:id="@+id/left_drawer"
-        android:layout_width="@dimen/menuWidth"
-        android:layout_height="match_parent"
-        android:layout_gravity="start" />
+	<fragment android:id="@+id/left_drawer"
+	          android:layout_width="@dimen/menuWidth"
+	          android:layout_height="match_parent"
+	          android:layout_gravity="start"
+	          android:name="com.cmovil.baseandroid.view.NavigationDrawerFragment" />
+
 
 </android.support.v4.widget.DrawerLayout>
