--- a/BaseAndroid/src/main/res/layout/splash_activity.xml
+++ b/BaseAndroid/src/main/res/layout/splash_activity.xml
@@ -9,6 +9,7 @@
     tools:context=".Splash">
 
     <TextView
+	    android:id="@+id/txtSectionNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
