--- a/BaseAndroid/src/main/res/layout/base_activity.xml
+++ b/BaseAndroid/src/main/res/layout/base_activity.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
+                                        xmlns:tools="http://schemas.android.com/tools"
+                                        android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,14 +10,16 @@
     <FrameLayout
         android:id="@+id/main_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/menuWidthPadding"/>
 
     <!-- The navigation drawer -->
 	<fragment android:id="@+id/left_drawer"
 	          android:layout_width="@dimen/menuWidth"
 	          android:layout_height="match_parent"
 	          android:layout_gravity="start"
-	          android:name="com.cmovil.baseandroid.view.NavigationDrawerFragment" />
+	          android:name="com.cmovil.baseandroid.view.NavigationDrawerFragment"
+	          tools:layout="@layout/fragment_navigation_drawer"/>
 
 
 </android.support.v4.widget.DrawerLayout>
