--- a/BaseAndroid/src/main/res/layout/splash_activity.xml
+++ b/BaseAndroid/src/main/res/layout/splash_activity.xml
@@ -14,4 +14,17 @@
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
 
+	<ImageView
+		android:id="@+id/imgTest"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_below="@id/txtSectionNumber"/>
+	<ProgressBar
+		android:id="@+id/progress"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_centerInParent="true"
+		android:indeterminate="true"
+		style="@android:style/Widget.ProgressBar.Large"/>
+
 </RelativeLayout>
