--- a/BaseAndroid/src/main/res/layout/base_activity.xml
+++ b/BaseAndroid/src/main/res/layout/base_activity.xml
@@ -14,11 +14,10 @@
         android:layout_marginLeft="@dimen/menuWidthPadding"/>
 
     <!-- The navigation drawer -->
-	<fragment android:id="@+id/left_drawer"
+	<FrameLayout android:id="@+id/left_drawer"
 	          android:layout_width="@dimen/menuWidth"
 	          android:layout_height="match_parent"
 	          android:layout_gravity="start"
-	          android:name="com.cmovil.baseandroid.view.NavigationDrawerFragment"
 	          tools:layout="@layout/fragment_navigation_drawer"/>
 
 
