--- a/BaseAndroidTest/src/main/res/layout/splash_activity.xml
+++ b/BaseAndroidTest/src/main/res/layout/splash_activity.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -26,5 +27,44 @@
 		android:layout_centerInParent="true"
 		android:indeterminate="true"
 		style="@android:style/Widget.ProgressBar.Large"/>
+
+	<com.cmovil.baseandroid.view.util.FloatingHintControl
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="16dp"
+		android:layout_below="@id/progress"
+		android:id="@+id/txtTest"
+		app:animationDuration="1000"
+		app:floatLabelTextAppearance="@style/TextAppearance.Test.FloatingHing">
+
+		<EditText
+			android:id="@+id/edit_password"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:hint="Texto de prueba"
+			android:singleLine="true"
+			android:inputType="textNoSuggestions"
+			android:imeOptions="actionDone" />
+
+	</com.cmovil.baseandroid.view.util.FloatingHintControl>
+
+	<com.cmovil.baseandroid.view.util.FloatingHintControl
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="16dp"
+		android:id="@+id/txtTest2"
+		android:layout_below="@id/txtTest"
+		app:floatLabelTextAppearance="@style/TextAppearance.Test.FloatingHing">
+
+		<EditText
+			android:id="@+id/edit_password"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:hint="Texto de prueba"
+			android:singleLine="true"
+			android:inputType="textNoSuggestions"
+			android:imeOptions="actionDone" />
+
+	</com.cmovil.baseandroid.view.util.FloatingHintControl>
 
 </RelativeLayout>
