--- a/BaseAndroidTest/src/main/res/values/styles.xml
+++ b/BaseAndroidTest/src/main/res/values/styles.xml
@@ -10,8 +10,17 @@
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
             backward-compatibility can go here.
+
         -->
+
+	    <item name="android:editTextStyle">@style/EditTextAppTheme</item>
+
     </style>
+
+	<style name="EditTextAppTheme" parent="android:Widget.EditText">
+		<item name="android:background">@drawable/apptheme_edit_text_holo_light</item>
+		<item name="android:textColor">#000000</item>
+	</style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
