Add floating hit to spinners

--- a/BaseAndroid/src/main/res/values/attrs.xml
+++ b/BaseAndroid/src/main/res/values/attrs.xml
@@ -21,5 +21,6 @@ limitations under the License.
 		<attr name="floatLabelTextAppearance" format="reference"/>
 		<attr name="animationDuration" format="integer"/>
 		<attr name="floatLabelSidePadding" format="reference|dimension"/>
+		<attr name="spinnerHint" format="string"/>
 	</declare-styleable>
 </resources>
