--- a/BaseAndroidTest/src/main/res/values/styles.xml
+++ b/BaseAndroidTest/src/main/res/values/styles.xml
@@ -1,31 +1,19 @@
 <resources>
 
+	<style name="AppBaseTheme" parent="BaseTheme">
+		<item name="colorPrimary">@color/primaryColor</item>
+		<item name="colorPrimaryDark">@color/primaryColorDark</item>
+		<item name="colorAccent">@color/colorAccent</item>
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
-    <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-
-        -->
-
-	    <item name="android:editTextStyle">@style/EditTextAppTheme</item>
-
-    </style>
+		<item name="android:colorPrimary">@color/primaryColor</item>
+		<item name="android:colorPrimaryDark">@color/primaryColorDark</item>
+		<item name="android:colorAccent">@color/colorAccent</item>
+	</style>
 
 	<style name="EditTextAppTheme" parent="android:Widget.EditText">
 		<item name="android:background">@drawable/apptheme_edit_text_holo_light</item>
 		<item name="android:textColor">#000000</item>
 	</style>
-
-    <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-    </style>
 
 	<style name="TextAppearance.Test.FloatingHing" parent="android:TextAppearance.Small">
 		<item name="android:textColor">#ff42a623</item>
