--- a/BaseAndroidTest/src/main/res/menu/splash.xml
+++ b/BaseAndroidTest/src/main/res/menu/splash.xml
@@ -1,6 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
+	<item
+		android:id="@+id/action_no_toolbar"
+		android:title="@string/action_toolbar"
+		android:orderInCategory="100"
+		android:showAsAction="never"/>
+
+	<item
+		android:id="@+id/action_toolbar"
+		android:title="@string/action_no_toolbar"
+		android:orderInCategory="200"
+		android:showAsAction="never"/>
 </menu>
