--- a/BaseAndroidTest/src/main/res/layout/splash_activity.xml
+++ b/BaseAndroidTest/src/main/res/layout/splash_activity.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context=".Splash">
@@ -9,7 +10,8 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:minHeight="?attr/actionBarSize"
-		android:background="?attr/colorPrimary"/>
+		android:background="?attr/colorPrimary"
+		app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
 	<include
 		layout="@layout/base_navigation_drawer"
