--- a/BaseAndroid/src/main/res/layout/simple_dialog_header.xml
+++ b/BaseAndroid/src/main/res/layout/simple_dialog_header.xml
@@ -2,23 +2,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/dialogHeader">
+                android:id="@+id/dialogHeader"
+                android:layout_marginBottom="@dimen/extra_small_margin">
 
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:textSize="22sp"
+		android:textSize="@dimen/simple_dialog_header_text"
 		android:textColor="?attr/colorPrimary"
-		android:text="@string/select_date"
-		android:padding="12dp"
+		android:padding="@dimen/dialog_header_padding"
 		android:id="@+id/txtTitle"/>
+
 
 	<View
 		android:layout_width="wrap_content"
 		android:layout_height="2dp"
 		android:background="?attr/colorPrimary"
 		android:layout_below="@id/txtTitle"
-		android:id="@+id/divider"
-		/>
+		android:id="@+id/divider"/>
 
 </RelativeLayout>
