--- a/BaseAndroidTest/src/main/res/layout/main_content.xml
+++ b/BaseAndroidTest/src/main/res/layout/main_content.xml
@@ -40,7 +40,8 @@
 	           android:layout_below="@id/btnBegin"
 		android:contentDescription="@null"
 		android:id="@+id/imgBlack"
-		android:tint="?attr/colorAccent"/>
+		android:tint="?attr/colorAccent"
+		android:elevation="2dp"/>
 
 	<ImageView android:layout_height="wrap_content"
 	           android:layout_width="wrap_content"
@@ -50,7 +51,9 @@
 	           android:layout_toEndOf="@id/imgBlack"
 	           android:contentDescription="@null"
 		android:id="@+id/imgGrey"
-		android:tint="?attr/colorAccent"/>
+		android:tint="?attr/colorAccent"
+		android:elevation="5dp"
+		android:translationZ="5dp"/>
 
 	<ImageView android:layout_height="wrap_content"
 	           android:layout_width="wrap_content"
@@ -59,7 +62,8 @@
 	           android:layout_alignBottom="@id/imgBlack"
 	           android:layout_toRightOf="@id/imgGrey"
 	           android:layout_toEndOf="@id/imgBlack"
-	           android:tint="?attr/colorAccent"/>
+	           android:tint="?attr/colorAccent"
+	           android:elevation="8dp"/>
 
 	<com.cmovil.baseandroid.view.util.FloatingHintControl
 		android:layout_width="match_parent"
