--- a/BaseAndroid/src/main/res/layout/date_picker_default_header.xml
+++ b/BaseAndroid/src/main/res/layout/date_picker_default_header.xml
@@ -5,13 +5,15 @@
                 android:id="@+id/dialogHeader">
 
 	<TextView
+		android:id="@+id/txtTitle"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:textSize="22sp"
 		android:textColor="?attr/colorPrimary"
 		android:text="@string/select_date"
 		android:padding="12dp"
-		android:id="@+id/txtTitle"/>
+		android:maxLines="1"
+		android:ellipsize="end"/>
 
 	<View
 		android:layout_width="wrap_content"
